@@ -49,4 +49,13 @@ PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_GOOGLE_SIZE_OPTION_MEDIUM="Medium"
 PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_GOOGLE_SIZE_OPTION_SMALL="Small"
 PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_GOOGLE_SIZE_OPTION_STANDARD="Standard"
 PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_GOOGLE_SIZE_OPTION_TALL="Tall"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_TWITTER_COUNT_DESCRIPTION="Choose where to display a count of the number of times the page has been tweeted"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_TWITTER_COUNT_LABEL="Count Position"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_TWITTER_COUNT_OPTION_HORIZONTAL="Horizontal"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_TWITTER_COUNT_OPTION_NONE="None"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_TWITTER_COUNT_OPTION_VERTICAL="Vertical"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_TWITTER_TEXT_DESCRIPTION="Optional text to display before the page link in the shared tweet"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_TWITTER_TEXT_DESCRIPTION="Tweet Text"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_TWITTER_USER_DESCRIPTION="A user to indicate the page was posted by (appends "_QQ_"via @user"_QQ_" to the share tweet)"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_TWITTER_USER_LABEL="Twitter Username"
 PLG_CONTENT_YETANOTHERSOCIAL_XML_DESCRIPTION="Yet Another Social Plugin is a plugin for Joomla! to display Twitter's Share, Google's +1, and Facebook's Like buttons"
