@@ -1,6 +1,7 @@
 28-July-2011 Michael Babker
 + Add options for Facebook Button
 + Add options for Google Button
++ Add options for Twitter Button
 
 27-July-2011 Michael Babker
 + Create the plugin
